Fix (images) : Improve coordinate precision when scaling an image.

DETAILS :

Ghostscript Bug 687345 "Image interpolation problem at a band boundary"

This is a partial fix for the bug 687345 for images with Interpolate=false.
Actually it is related to scaling raher than interpolation.

1. gx_image_enum_begin performed inaccurate coordinate computations,
which caused a different image bias for different bands
due to a wrong coordinate rounding.
The patch replaces it with a better code,
which provides same bias for all bands and for unbanded rendering.
But we're not sure that image placement is now perfect,
because the initial rounding looks strange.
We keep the initial rounding to be compatible with the old code
to minimize raster differences and easier visual analyzis.
For a while we keep the old code in #if 0 because
it may be useful for next patch.

2. image_render_frac contains optimized branches for the case when
image's axes are parallel to page's axes.
Those optimized branches convert parallelograms into rectangles,
except for the last parallelogramm in the chunk.
It caused the last parallelogram to shift in 1 pixel relatively
to the rectangles. This patch adds the optimized branch
for the last parallelogram, so that all image parts
are now placed with same rounding. It avoids rendering artifacts
with 148-05.ps and many other tests. Note that the patch does not fix
the rectangle shift from parallelograms,
so probably it still contain another bug,
which may need a separate fix.

3. While working on this patch we noted that update_strip
doesn't correctly preserve the fractional part for
dda.strip and dda.pixel . We include a track of that experiment
in the new code in #if 0 section for further development.
See comment in code.

4. Inserted visual trace commands for easier debugging.

EXPECTED DIFFERENCES :

This patch avoids difference between banded (MaxBitmap=100000)
and unbanded (MaxBitmap=100000000) rendering at 300 dpi for the following files :

035-01.ps
148-11.ps
148-16.ps
1_2001.pdf
455690.pdf
adesso4.pdf
Altona-Testsuite_p2_S_x3.pdf
Altona_Visual_bb_1v1_x3.pdf
Altona_Visual_sb_1v1_x3.pdf
bc_02a01_cal.pdf
BEST8-99-Path.fh7.pdf
Bug687724.pdf
Bug687832.pdf
Bug688308.ps
Bug688822.eps
dave.pdf
eric.pdf
file2.pdf
foo.pdf
H00216q.pdf
map.pdf
messenger.pdf
messenger16.pdf
ngnews1.pdf
Original.pdf
PixelisAd.pdf
ridt91.eps
S2_Digitalproof-Forum_x3k.pdf
SmoothShading.pdf
t1.pdf
time1.pdf

Also it causes minor differences for the following files :

"119-47.ps"
"468-01.ps"
"688645.jbig2.pdf"
"a.pdf"
"acrobat.pdf"
"ai2.pdf"
"Altona.Page_3.2002-09-27.pdf"
"Altona_Technical_1v1_x3.pdf"
"Bug687207.ps"
"Bug687840.pdf"
"Bug687889.pdf"
"Bug688308.ps"
"Bug688467.ps"
"Bug688639.ps"
"Bug689189.pdf"
"Bug689492.pdf"
"C-12-2706-0239-9-001.pdf"
"chstudy.pdf"
"D-12-2025-9478-9.pdf"
"dina4_tiffg4.pdf"
"Es001-01.pdf"
"jpx-file2.pdf"
"jpx-file3.pdf"
"jpx-flowcontrols.pdf"
"jpx-johnny1.pdf"
"little.guy.pdf"
"new_rect_nr.pdf"
"Openhuis_pdf_zw.pdf"
"sports.pdf"
"Svd.pdf"
"test.pdf"

Please note that the patch changes both banded and unbanded rendering.
In most cases the difference is a 1 pixel shift of
an image or a shift of an intersection of an image with a band.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@8517 a1074d23-0009-0410-80fe-cf8c14f379e6